tests/typing/good/var_loop.catala_en
# This program segaults while it should not!

```catala
declaration to_tuple_associated_list
  content list of (integer, anything of type t)
  depends on l content list of (integer, anything of type t)
  equals map each p among l to ((to_tuple of p.1), p.2)

declaration to_tuple
  content integer
  depends on p content integer
  equals p

declaration sort
  content list of (integer, anything of type t)
  depends on p content list of (integer, anything of type t)
  equals impossible

declaration sort_by_date
  content list of (integer, anything of type t)
  depends on l content list of (integer, anything of type t)
  equals
    sort of (to_tuple_associated_list of l)
```

```catala-test-cli
$ catala typecheck
┌─[RESULT]─
│ Typechecking successful!
└─
```
