tests/typing/bad/too_specialised.catala_en
```catala
declaration minmax content (anything of type t, anything of type t)
  depends on lst content list of anything of type t
  equals
  combine all element among lst
    in (min, max) initially (-1, -1)
  with (if element <= min or min = -1 then element else min, if element >= max then element else max)
```


```catala-test-cli
$ catala typecheck
┌─[ERROR]─
│
│  In this function definition, the type <t> is specified as anything,
│  but it appears to only work for integer here
│
├─➤ tests/typing/bad/too_specialised.catala_en:6.34-6.36:
│   │
│ 6 │     in (min, max) initially (-1, -1)
│   │                                  ‾‾
└─
#return code 123#
```
